moving installation config to seperate file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,8 @@ add_custom_target(cppcheck
 # Build the lib and install into configured prefix
 add_library(Simple-Socket ${SIMPLE_SOCKET_SOURCES} ${DATA_FILE})
 target_compile_features(Simple-Socket INTERFACE cxx_std_11)
+target_compile_options(Simple-Socket INTERFACE ${WARNING_FLAGS})
+target_link_libraries(Simple-Socket INTERFACE ${PROJECT_LIBS})
 set_target_properties(Simple-Socket
                       PROPERTIES CXX_STANDARD
                                  11
@@ -144,8 +146,6 @@ if(SIMPLE_SOCKET_STRING_VIEW)
                                    ON)
   target_compile_options(Simple-Socket INTERFACE -DSTRING_VIEW)
 endif()
-target_compile_options(Simple-Socket INTERFACE ${WARNING_FLAGS})
-target_link_libraries(Simple-Socket INTERFACE ${PROJECT_LIBS})
 set_target_properties(Simple-Socket
                       PROPERTIES VERSION
                                  ${SIMPLE_SOCKET_VERSION}
@@ -153,29 +153,7 @@ set_target_properties(Simple-Socket
                                  ${SIMPLE_SOCKET_MAJOR_VERSION})
 
 # Setup installation config
-include(CMakePackageConfigHelpers)
-set(INCLUDE_INSTALL_DIR include/)
-set(LIBRARY_INSTALL_DIR lib/)
-configure_package_config_file(
-  ${PROJECT_SOURCE_DIR}/cmake/Simple-Socket-Config.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/Simple-SocketConfig.cmake
-  INSTALL_DESTINATION
-  cmake'
-  PATH_VARS
-  INCLUDE_INSTALL_DIR
-  LIBRARY_INSTALL_DIR)
-write_basic_package_version_file(
-  ${CMAKE_CURRENT_BINARY_DIR}/Simple-SocketConfigVersion.cmake
-  VERSION ${SIMPLE_SOCKET_VERSION}
-  COMPATIBILITY SameMajorVersion)
-
-install(TARGETS Simple-Socket RUNTIME DESTINATION bin ARCHIVE DESTINATION lib)
-install(FILES ${SIMPLE_SOCKET_HEADERS} DESTINATION include)
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/Simple-SocketConfig.cmake
-              ${CMAKE_CURRENT_BINARY_DIR}/Simple-SocketConfigVersion.cmake
-        DESTINATION cmake)
-
-export(PACKAGE Simple-Socket)
+include(Simple-Socket-Install)
 
 if(SIMPLE_SOCKET_EXAMPLES)
   add_subdirectory(examples)
