trying to check in clang++ is installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,19 @@ jobs:
   - os: linux
     dist: xenial
     compiler: clang
+    addons:
+      apt:
+        packages:
+        - which
+        - whereis
     env:
     - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
+    script:
+    - which clang
+    - whereis clang++
+    - clang++ --version
+    - ls -la /usr/bin | grep clang
+    - sudo apt-get install clang++
     
   - os: linux
     dist: trusty
