--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,14 @@ jobs:
     env:
     - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
     script:
-    - sudo pip install cmake-format
-    - cmake-format CMakeLists.txt
+    - sudo -H pip install cmake-format
+    - cmake-format CMakeLists.txt > CMakeLists.txt.format
+    - mv CMakeLists.txt CMakeLists.txt.old
+    - mv CMakeLists.txt.format CMakeLists.txt
+    - git status
     - mkdir build-travis
     - cd build-travis
-    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Debug
-      -DSIMPLE_SOCKET_EXAMPLES=OFF -DSIMPLE_SOCKET_COVERAGE=OFF -DSIMPLE_SOCKET_TEST=ON -DSIMPLE_SOCKET_LINT=ON
+    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_LINT=ON
     after_success:
     - echo "TO DO"
 
