--- a/.travis.yml
+++ b/.travis.yml
@@ -32,14 +32,22 @@ jobs:
     env:
     - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
     script:
+    - git config --global user.email "travis@travis-ci.org"
+    - git config --global user.name "Travis CI"
+    - git checkout -b travis/${TRAVIS_BRANCH}_${TRAVIS_BUILD_NUMBER}
     - sudo -H pip install cmake-format
     - cmake-format CMakeLists.txt > CMakeLists.txt.format
     - mv CMakeLists.txt CMakeLists.txt.old
     - mv CMakeLists.txt.format CMakeLists.txt
-    - git status
+    - git diff
+    - git commit -a -m "cmake-formatted by ci"
+    - git remote add origin https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket > /dev/null 2>&1
+    - git push -u origin
     - mkdir build-travis
     - cd build-travis
     - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_LINT=ON
+    - make
+    - make cppcheck
     after_success:
     - echo "TO DO"
 
