--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,8 @@ jobs:
     - mv CMakeLists.txt.format CMakeLists.txt
     - git diff
     - git commit -a -m "cmake-formatted by ci"
-    - git remote add origin https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket > /dev/null 2>&1
-    - git push -u origin
+    - git remote add origin-ci https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket.git
+    - git push --set-upstream origin-ci
     - mkdir build-travis
     - cd build-travis
     - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_LINT=ON
@@ -51,7 +51,7 @@ jobs:
     after_success:
     - echo "TO DO"
 
-  - os: linux
+  - stage: Lint
     addons:
       apt:
         sources:
