--- a/.travis.yml
+++ b/.travis.yml
@@ -17,41 +17,7 @@ script:
 
 jobs:
   include:
-  - stage: Lint
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        - llvm-toolchain-trusty-8
-        packages:
-        - cppcheck
-        - clang-8
-        - clang-tidy-8
-        - libc++-8-dev
-        - libc++abi-8-dev
-    env:
-    - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
-    script:
-    - git config --global user.email "travis@travis-ci.org"
-    - git config --global user.name "Travis CI"
-    - git checkout -b travis/${TRAVIS_BRANCH}_${TRAVIS_BUILD_NUMBER}
-    - sudo -H pip install cmake-format
-    - cmake-format CMakeLists.txt > CMakeLists.txt.format
-    - mv CMakeLists.txt CMakeLists.txt.old
-    - mv CMakeLists.txt.format CMakeLists.txt
-    - git diff
-    - git commit -a -m "cmake-formatted by ci"
-    - git remote add origin-ci https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket.git
-    - git push --set-upstream origin-ci
-    - mkdir build-travis
-    - cd build-travis
-    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_LINT=ON
-    - make
-    - make cppcheck
-    after_success:
-    - echo "TO DO"
-
-  - stage: Lint
+  - os: linux
     addons:
       apt:
         sources:
@@ -143,6 +109,40 @@ jobs:
     - gem install coveralls-lcov
     - coveralls-lcov coverage.info.cleaned
     - curl -X PURGE https://camo.githubusercontent.com/17f413e2bbe682cd351ce70ca2f36765393e99f5/68747470733a2f2f636f766572616c6c732e696f2f7265706f732f6769746875622f7072696e63652d63687269736d632f53696d706c652d536f636b65742f62616467652e7376673f6272616e63683d6d6173746572
+
+  - stage: Lint
+    addons:
+      apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        - llvm-toolchain-trusty-8
+        packages:
+        - cppcheck
+        - clang-8
+        - clang-tidy-8
+        - libc++-8-dev
+        - libc++abi-8-dev
+    env:
+    - MATRIX_EVAL="CC=clang-8 && CXX=clang++-8"
+    script:
+    - git config --global user.email "travis@travis-ci.org"
+    - git config --global user.name "Travis CI"
+    - git checkout -b travis/${TRAVIS_BRANCH}_${TRAVIS_BUILD_NUMBER}
+    - sudo -H pip install cmake-format
+    - cmake-format CMakeLists.txt > CMakeLists.txt.format
+    - mv CMakeLists.txt CMakeLists.txt.old
+    - mv CMakeLists.txt.format CMakeLists.txt
+    - git diff
+    - git commit -a -m "cmake-formatted by ci"
+    - git remote add origin-ci https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket.git
+    - git push --set-upstream origin-ci
+    - mkdir build-travis
+    - cd build-travis
+    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_LINT=ON
+    - make
+    - make cppcheck
+    after_success:
+    - echo "TO DO"
 
   - stage: Legacy
     dist: trusty
