--- a/.travis.yml
+++ b/.travis.yml
@@ -139,7 +139,7 @@ jobs:
     - git commit -a -m "cmake-formatted by ci"
     - mkdir build-travis
     - cd build-travis
-    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_LINT=ON
+    - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_EXAMPLES=OFF -DSIMPLE_SOCKET_LINT=ON
     - make
     - make cppcheck # incorrect version gets installed
     after_success:
