trying to migrate catch to an external dependency

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,15 +11,25 @@ set(SIMPLE_SOCKET_STRING_VIEW
     ON
     CACHE BOOL "Required by tester and coverage" FORCE)
 
+include(FetchContent)
+FetchContent_Declare(Catch
+    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+    GIT_TAG v2.9.1
+)
+
+FetchContent_MakeAvailable(Catch)
+
+include(CTest)
+include(Catch)
+
 # Tester
 if(SIMPLE_SOCKET_TEST)
-  enable_testing()
-  add_executable(${TESTER} ${TESTER_SOURCES})
-  target_compile_features(${TESTER} PRIVATE cxx_std_17)
-  target_include_directories(${TESTER} PRIVATE ${PROJECT_SOURCE_DIR}/src)
-  target_compile_options(${TESTER} PRIVATE ${WARNING_FLAGS})
-  target_link_libraries(${TESTER} Simple-Socket ${THREAD_LIB})
-  add_test(NAME tester COMMAND ${TESTER})
+    add_executable(${TESTER} ${TESTER_SOURCES})
+    target_compile_features(${TESTER} PRIVATE cxx_std_17 )
+    target_include_directories(${TESTER} PRIVATE ${PROJECT_SOURCE_DIR}/src)
+    target_compile_options(${TESTER} PRIVATE ${WARNING_FLAGS})
+    target_link_libraries(${TESTER} Simple-Socket ${THREAD_LIB} Catch2::Catch2)
+    catch_discover_tests(${TESTER})
 endif()
 
 # Coverage
@@ -30,17 +40,11 @@ if(SIMPLE_SOCKET_COVERAGE
   include(CodeCoverage)
   set(COVERAGE_LCOV_EXCLUDES ${TESTER_SOURCES} "*catch2/*" "*7/*")
 
-  add_executable(${COVERAGE} ${SIMPLE_SOCKET_SOURCES} ${TESTER_SOURCES})
-  target_include_directories(${COVERAGE} PRIVATE ${PROJECT_SOURCE_DIR}/src)
-  target_compile_features(${COVERAGE} PRIVATE cxx_std_17)
-  target_compile_options(${COVERAGE}
-                         PRIVATE -g
-                                 -O0
-                                 --coverage
-                                 -fprofile-arcs
-                                 -ftest-coverage
-                                 -DSTRING_VIEW)
-  target_link_libraries(${COVERAGE} ${THREAD_LIB} gcov)
+    add_executable(${COVERAGE} ${SIMPLE_SOCKET_SOURCES} ${TESTER_SOURCES})
+    target_include_directories(${COVERAGE} PRIVATE ${PROJECT_SOURCE_DIR}/src)
+    target_compile_features(${COVERAGE} PRIVATE cxx_std_17 )
+    target_compile_options(${COVERAGE} PRIVATE -g -O0 --coverage -fprofile-arcs -ftest-coverage -DSTRING_VIEW)
+    target_link_libraries(${COVERAGE} ${THREAD_LIB} gcov Catch2::Catch2)
 
   setup_target_for_coverage_lcov(NAME
                                  coverage
