--- a/.travis.yml
+++ b/.travis.yml
@@ -136,14 +136,13 @@ jobs:
     - cmake-format CMakeLists.txt > CMakeLists.txt.format
     - rm CMakeLists.txt && mv CMakeLists.txt.format CMakeLists.txt
     - git add -u
-    - git diff-index --quiet HEAD || git commit -m "cmake-formatted by ci"
+    - git diff-index --quiet HEAD || ( git commit -m "cmake-formatted by ci"
+      && git remote add origin-ci https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket.git
+      && push --set-upstream origin-ci )
     - mkdir build-travis && cd build-travis
     - cmake .. -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DSIMPLE_SOCKET_EXAMPLES=OFF -DSIMPLE_SOCKET_LINT=ON
     - make
     #- make cppcheck # incorrect version gets installed
-    after_success:
-    - git remote add origin-ci https://${GH_TOKEN}@github.com/prince-chrismc/Simple-Socket.git
-    - git push --set-upstream origin-ci
 
   - stage: Legacy
     dist: trusty
