--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,24 +11,13 @@ set(SIMPLE_SOCKET_STRING_VIEW
     ON
     CACHE BOOL "Required by tester and coverage" FORCE)
 
-include(FetchContent)
-FetchContent_Declare(Catch
-    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-    GIT_TAG v2.9.1
-)
-
-FetchContent_MakeAvailable(Catch)
-
-include(CTest)
-include(Catch)
-
 # Tester
 if(SIMPLE_SOCKET_TEST)
     add_executable(${TESTER} ${TESTER_SOURCES})
     target_compile_features(${TESTER} PRIVATE cxx_std_17 )
     target_include_directories(${TESTER} PRIVATE ${PROJECT_SOURCE_DIR}/src)
     target_compile_options(${TESTER} PRIVATE ${WARNING_FLAGS})
-    target_link_libraries(${TESTER} Simple-Socket ${THREAD_LIB} Catch2::Catch2)
+    target_link_libraries(${TESTER} Simple-Socket ${THREAD_LIB})
     catch_discover_tests(${TESTER})
 endif()
 
@@ -44,7 +33,7 @@ if(SIMPLE_SOCKET_COVERAGE
     target_include_directories(${COVERAGE} PRIVATE ${PROJECT_SOURCE_DIR}/src)
     target_compile_features(${COVERAGE} PRIVATE cxx_std_17 )
     target_compile_options(${COVERAGE} PRIVATE -g -O0 --coverage -fprofile-arcs -ftest-coverage -DSTRING_VIEW)
-    target_link_libraries(${COVERAGE} ${THREAD_LIB} gcov Catch2::Catch2)
+    target_link_libraries(${COVERAGE} ${THREAD_LIB} gcov)
 
   setup_target_for_coverage_lcov(NAME
                                  coverage
