--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,16 @@ jobs:
     env:
     - MATRIX_EVAL="CC=gcc-8 && CXX=g++-8"
     
+  - os: linux
+    addons:
+      apt:
+        sources:
+        - ubuntu-toolchain-r-test
+        packages:
+        - g++-9
+    env:
+    - MATRIX_EVAL="CC=gcc-9 && CXX=g++-9"
+    
   - os: osx
     osx_image: xcode10.2
     env:
